tests/specs/class_constructor.txt
# mod.ts
export class Class {
  constructor(public a, readonly b) {
    // requires a jsdoc because it has params
  }
}

/** doc2 */
export class Class2 {
  constructor() {
    // won't require a jsdoc because there's no params
  }
}

/** doc3 */
export class Class3 {
  private constructor(value: string) {
    // won't require a jsdoc because it's private
  }
}

/** doc4 */
export class Class4 {
  constructor(s: string);
  constructor(s: number);
  constructor(value: string | number) {
    // won't require a jsdoc because it's a body
  }
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   constructor(public a, readonly b) {
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:23:3
   | 
23 |   constructor(s: string);
   |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:24:3
   | 
24 |   constructor(s: number);
   |   ^

# output.txt
Defined in file:///mod.ts:1:1

class Class

  constructor(public a, readonly b)

Defined in file:///mod.ts:8:1

class Class2
  doc2

  constructor()

Defined in file:///mod.ts:15:1

class Class3
  doc3

  private constructor(value: string)

Defined in file:///mod.ts:22:1

class Class4
  doc4

  constructor(s: string)
  constructor(s: number)


# output.json
[
  {
    "name": "Class",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "class",
    "classDef": {
      "isAbstract": false,
      "constructors": [
        {
          "accessibility": null,
          "hasBody": true,
          "name": "constructor",
          "params": [
            {
              "accessibility": "public",
              "kind": "identifier",
              "name": "a",
              "optional": false,
              "tsType": null
            },
            {
              "kind": "identifier",
              "name": "b",
              "optional": false,
              "tsType": null,
              "readonly": true
            }
          ],
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 23
          }
        }
      ],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  },
  {
    "name": "Class2",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 8,
      "col": 0,
      "byteIndex": 124
    },
    "declarationKind": "export",
    "jsDoc": {
      "doc": "doc2"
    },
    "kind": "class",
    "classDef": {
      "isAbstract": false,
      "constructors": [
        {
          "accessibility": null,
          "hasBody": true,
          "name": "constructor",
          "params": [],
          "location": {
            "filename": "file:///mod.ts",
            "line": 9,
            "col": 2,
            "byteIndex": 148
          }
        }
      ],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  },
  {
    "name": "Class3",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 15,
      "col": 0,
      "byteIndex": 238
    },
    "declarationKind": "export",
    "jsDoc": {
      "doc": "doc3"
    },
    "kind": "class",
    "classDef": {
      "isAbstract": false,
      "constructors": [
        {
          "accessibility": "private",
          "hasBody": true,
          "name": "constructor",
          "params": [
            {
              "kind": "identifier",
              "name": "value",
              "optional": false,
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "keyword": "string"
              }
            }
          ],
          "location": {
            "filename": "file:///mod.ts",
            "line": 16,
            "col": 2,
            "byteIndex": 262
          }
        }
      ],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  },
  {
    "name": "Class4",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 22,
      "col": 0,
      "byteIndex": 368
    },
    "declarationKind": "export",
    "jsDoc": {
      "doc": "doc4"
    },
    "kind": "class",
    "classDef": {
      "isAbstract": false,
      "constructors": [
        {
          "accessibility": null,
          "name": "constructor",
          "params": [
            {
              "kind": "identifier",
              "name": "s",
              "optional": false,
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "keyword": "string"
              }
            }
          ],
          "location": {
            "filename": "file:///mod.ts",
            "line": 23,
            "col": 2,
            "byteIndex": 392
          }
        },
        {
          "accessibility": null,
          "name": "constructor",
          "params": [
            {
              "kind": "identifier",
              "name": "s",
              "optional": false,
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "keyword": "number"
              }
            }
          ],
          "location": {
            "filename": "file:///mod.ts",
            "line": 24,
            "col": 2,
            "byteIndex": 418
          }
        },
        {
          "accessibility": null,
          "hasBody": true,
          "name": "constructor",
          "params": [
            {
              "kind": "identifier",
              "name": "value",
              "optional": false,
              "tsType": {
                "repr": "",
                "kind": "union",
                "union": [
                  {
                    "repr": "string",
                    "kind": "keyword",
                    "keyword": "string"
                  },
                  {
                    "repr": "number",
                    "kind": "keyword",
                    "keyword": "number"
                  }
                ]
              }
            }
          ],
          "location": {
            "filename": "file:///mod.ts",
            "line": 25,
            "col": 2,
            "byteIndex": 444
          }
        }
      ],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
